hyrax_tests/errors/BadConstraintSyntax.dmr
url = http://localhost:8080/opendap/data/nc/fnoc1.nc.dmr?dap4.ce=u,v
-s 
